# quicreach

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  chart.js  data.csv  index.html
.azure/: onebranch.props  post-build.ps1  pre-build.ps1
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml  onebranch.yml  reach.yml
src/: CMakeLists.txt  domains.hpp  installer.wxs  quicreach.cpp  quicreach.rc  quicreach.ver  top_domains.h
